<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Go4Lunch</string>
    <string name="sub_title">Find a nice restaurant and invite your co-workers for lunch</string>

    <!-- FACEBOOK PURPOSE -->
    <string name="facebook_application_id" translatable="false">230792571092962</string>
    <string name="facebook_login_protocol_scheme" translatable="false" tools:ignore="UnusedResources">fb230792571092962</string>

    <!-- Firebase auth message -->
    <string name="connection_succeed">connexion réussie</string>
    <string name="connection_canceled">connexion annulée</string>
    <string name="error_no_internet">pas de connexion internet</string>
    <string name="error_unknown_error">erreur inconnue</string>
    <string name="info_no_email_found">E-MAIL : Inconnu</string>
    <string name="info_no_username_found">NOM : Inconnu</string>

    <!-- IHM String -->
    <string name="general_toolbar_title">j\'ai faim!</string>
    <string name="toolbar_title_frag3">Collègues disponible</string>
    <string name="toolbar_edit_text_hint">Chercher restaurants</string>

    <!-- Navigation drawer item -->
    <string name="item_1">Votre déjeunez</string>
    <string name="item_2">réglages</string>
    <string name="item_3">déconnexion</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="name">nom</string>
    <string name="mail">e-mail</string>
    <string name="your_lunch">Aucune validation de restaurant</string>

    <!-- bottom navigation bar -->
    <string name="bottom_item_1">Carte</string>
    <string name="bottom_item_2">Liste</string>
    <string name="bottom_item_3">Collègues</string>

    <!-- Log TAG -->
    <string name="Log_i">TAGI</string>

    <!-- Secret -->
    <string name="twitter_consumer_key" translatable="false">0tUWaoU9cuLn0QAJWEyTftQcs</string>
    <string name="twitter_consumer_secret" translatable="false">WXesOkR3mhAfcuRau7zqOJ8gsm64dx2De3L7byrEXSvyLP2XO6</string>

    <!-- File Restaurant words -->
    <string name="call">APPEL</string>
    <string name="LIKE">AIME</string>
    <string name="DISLIKE">AIME PAS</string>
    <string name="WEBSITE">SITE WEB</string>
    <string name="callDisabled">NUMERO DE TELEPHONE INEXISTANT</string>
    <string name="websiteDisabled">SITE WEB INEXISTANT</string>

    <!-- RecyclerView restaurant-->
    <string name="ouvert">Ouvert jusqu\'à </string>
    <string name="pause">Ouvrira à </string>
    <string name="fermé">Fermé</string>
    <string name="bientôt_fermé">Bientôt fermé</string>

    <!-- RecyclerView workmates -->
    <string name="pas_de_decision">n\'a pas encore décidé</string>
    <string name="decision">mange à</string>
    <string name="no_list">PAS DE LISTE DISPONIBLE</string>
    <string name="is_joining">participe!</string>

    <!-- Settings Activity -->
    <string name="settings_title">REGLAGES</string>
    <string name="settings_profile">PROFIL</string>
    <string name="settings_notifications">Notifications activées</string>
    <string name="settings_button">EFFACER COMPTE</string>
    <string name="settings_name">NOM :</string>

    <!-- Notification -->
    <string name="content_text">Votre restaurant d\'aujourd\'hui :</string>
    <string name="adress_notification">Adresse :</string>
    <string name="participation_notification">collègues :</string>

    <string name="google_place_api_key" translatable="false">AIzaSyBop_LoznRWmdx8u9VjSFu0PVaAqO0mO8U</string>

</resources>
