<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.Guideline
        android:id="@+id/guideline_middle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideline_upper_divider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.36"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideline_resturant_information_divider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.43"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideline_down_divider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.64"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideline_three_button_divider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.57"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideline_first_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.33"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideline_second_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.66"/>

    <Button
        android:id="@+id/button_restaurant_choice"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/guideline_resturant_information_divider"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/restaurant_info_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_middle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restaurant_photo"
        app:srcCompat="@color/colorPrimary" />

    <TextView
        android:id="@+id/restaurant_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/guideline_resturant_information_divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_upper_divider" />

    <ImageView
        android:id="@+id/restaurant_photo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_upper_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:color/holo_orange_dark" />

    <TextView
        android:id="@+id/restaurant_adress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_resturant_information_divider" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_three_button_divider"
        app:layout_constraintEnd_toStartOf="@+id/guideline_first_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/baseline_call_black_24" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_three_button_divider"
        app:layout_constraintEnd_toStartOf="@+id/guideline_second_vertical"
        app:layout_constraintStart_toStartOf="@+id/guideline_first_vertical"
        app:srcCompat="@drawable/baseline_star_black_24" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_three_button_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_second_vertical"
        app:srcCompat="@drawable/baseline_vpn_lock_black_24" />

    <TextView
        android:id="@+id/CALL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/call"
        app:layout_constraintBottom_toTopOf="@+id/guideline_down_divider"
        app:layout_constraintEnd_toStartOf="@+id/guideline_first_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_three_button_divider" />

    <TextView
        android:id="@+id/LIKE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/LIKE"
        app:layout_constraintBottom_toTopOf="@+id/guideline_down_divider"
        app:layout_constraintEnd_toStartOf="@+id/guideline_second_vertical"
        app:layout_constraintStart_toStartOf="@+id/guideline_first_vertical"
        app:layout_constraintTop_toTopOf="@+id/guideline_three_button_divider" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/WEBSITE"
        app:layout_constraintBottom_toTopOf="@+id/guideline_down_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_second_vertical"
        app:layout_constraintTop_toTopOf="@+id/guideline_three_button_divider" />

    <Button
        android:id="@+id/button_call"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/guideline_down_divider"
        app:layout_constraintEnd_toStartOf="@+id/guideline_first_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_middle" />

    <Button
        android:id="@+id/button_like"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/guideline_down_divider"
        app:layout_constraintEnd_toStartOf="@+id/guideline_second_vertical"
        app:layout_constraintStart_toEndOf="@+id/button_call"
        app:layout_constraintTop_toTopOf="@+id/guideline_middle" />

    <Button
        android:id="@+id/button_website"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/guideline_down_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_like"
        app:layout_constraintTop_toTopOf="@+id/guideline_middle" />




</android.support.constraint.ConstraintLayout>